Mincoin joins the party on CoinChoose.

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -15,6 +15,7 @@ minebte = False
 minesc = False
 minefrc=False
 mineftc=False
+minemnc=False
 #If you want to mine vanity addresses, then set this to True
 minevanity = False
 
@@ -42,6 +43,7 @@ scscript =
 frcscript = 
 btescript =
 ftcscript = 
+mncscript = 
 
 #Set specific fee for every coin (in percent). The fee simply adds to the
 #profitability before calculating the most profitable coin. Negative values are
@@ -57,6 +59,7 @@ feebte = 0
 feesc = 0
 feefrc = 0
 feeftc = 0
+feemnc = 0
 
 [Misc]
 #What source for our data should we use? ChooseCoin is probably better,
