Added DigitalCoin; Status Output supports more coins
More and more coins are being released and the screen witdh of 80 chars tends to get too small. So in the status output, less chars are used to display all coins. Up to 10 coins should run fine now (puh). If more coins are mined simultaniously, the status output needs to be reworked to support more coins. Todo for the future...

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -19,6 +19,7 @@ minemnc = False
 minecnc = False
 minebtb = False
 minewdc = False
+minedgc = False
 #If you want to mine vanity addresses, then set this to True
 minevanity = False
 
@@ -38,18 +39,19 @@ mineixc = True
 [Scripts]
 ltcscript = ./litecoin.sh
 btcscript = ./bitcoin.sh
-vanityscript = 
-ppcscript = 
-nvcscript = 
-trcscript = 
-bqcscript = 
-frcscript = 
+vanityscript =
+ppcscript =
+nvcscript =
+trcscript =
+bqcscript =
+frcscript =
 btescript =
-ftcscript = 
-mncscript = 
+ftcscript =
+mncscript =
 cncscript =
-btbscript = 
-wdcscript = 
+btbscript =
+wdcscript =
+dgcscript =
 
 #Set specific fee for every coin (in percent). The fee simply adds to the
 #profitability before calculating the most profitable coin. Negative values are
@@ -69,6 +71,7 @@ feemnc = 0
 feecnc = 0
 feebtb = 0
 feewdc = 0
+feedgc = 0
 
 [Misc]
 #What source for our data should we use? ChooseCoin is probably better,
