--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -1,12 +1,14 @@
-#---------------------------------------
-#Cryptocurrency mining switcher config file
-#TipJar (BTC): 1NhathL6LpcgofDnHELSS6Hej6kU9xrVgp
-#Author: area
-#---------------------------------------
+# ---------------------------------------
+# Cryptocurrency mining switcher config file
+# TipJar (BTC): 1NhathL6LpcgofDnHELSS6Hej6kU9xrVgp
+# Author: area
+# ---------------------------------------
 
+
+################################################################################
 [MineCoins]
 
-#Enable the coins you want to mine here.
+# Enable the coins you want to mine here.
 minebqc = False
 minebtb = False
 minebtc = True
@@ -27,55 +29,60 @@ mineryc = False
 minetrc = False
 minewdc = False
 
-#BTC Merged mining coins. 
-#Will be added to Bitcoin profitibilty when True.
+# BTC Merged mining coins.
+# Will be added to Bitcoin profitibilty when True.
 minedvc = True
 mineixc = True
 minenmc = True
 
-#If you want to mine vanity addresses, then set this to True
+# If you want to mine vanity addresses, then set this to True
 minevanity = False
 
+
+################################################################################
 [Scripts]
-#You should have scripts that stop all other forms of mining,
+
+# You should have scripts that stop all other forms of mining,
 # set all necesary environment variables,
-# and start mining the appropriate coin. 
+# and start mining the appropriate coin.
 
-#Examples included are 'litecoin.sh' and 'bitcoin.sh'.
-#Any coins you aren't mining you can just leave blank.
-#For Windows you can use bat-files, eg "btcscript = bitcoin.bat".
-
-bqcscript = 
-btbscript = 
+# Examples included are 'litecoin.sh' and 'bitcoin.sh'.
+# Any coins you aren't mining you can just leave blank.
+# For Windows you can use bat-files, eg "btcscript = bitcoin.bat".
+bqcscript =
+btbscript =
 btcscript = bitcoin.bat
-btescript = 
-cncscript = 
-dgcscript = 
-elcscript = 
-frcscript = 
-ftcscript = 
-gldscript = 
-jkcscript = 
+btescript =
+cncscript =
+dgcscript =
+elcscript =
+frcscript =
+ftcscript =
+gldscript =
+jkcscript =
 ltcscript = ./litecoin.sh
-mncscript = 
-nvcscript = 
-ppcscript = 
-pwcscript = 
-rycscript = 
-trcscript = 
-wdcscript = 
+mncscript =
+nvcscript =
+ppcscript =
+pwcscript =
+rycscript =
+trcscript =
+wdcscript =
 
-vanityscript = 
+vanityscript =
 
+
+################################################################################
 [Fees]
-#Set specific fees for every coin (in percent). 
-#The fee simply adds to the profitability before calculating the most profitable coin.
-#Negative values are also allowed, they increase the profitability.
+
+# Set specific fees for every coin (in percent).
+# The fee simply adds to the profitability before calculating the most profitable coin.
+# Negative values are also allowed, they increase the profitability.
 feebqc = 2
 feebtb = 0
 feebtc = 1.5
 feebte = 0
-feecnc = 2
+feecnc = -2
 feedgc = 2
 feeelc = 0
 feefrc = 2
@@ -91,40 +98,72 @@ feeryc = 0
 feetrc = 2
 feewdc = 0
 
-[Misc]
 
-#What source for our data should we use? ChooseCoin is probably better,
-#in that it lists more coins. Coinotron seems to be updated most frequently.
-#The first entry in the list has the highest priority and is used first. If the
-#site is down, the second source is used.
+################################################################################
+[Data-Source]
+
+# What source for our data should we use? ChooseCoin is probably better,
+# in that it lists more coins. Coinotron seems to be updated most frequently.
+# The first entry in the list has the highest priority and is used first. If the
+# site is down, the second source is used.
+# CryptoSwitcher can also do the profitability calculation itself. To let enable
+# add cryptoswitcher to the list.
+# Available sources: cryptoswitcher, coinotron, coinchoose, dustcoin
 source=coinotron, coinchoose, dustcoin
 
-#Idle Time (in minutes) between two checks of coin profitability.
-idletime = 5
+# If CryptoSwitcher is added to the source list, it calculates the profitability
+# itself by using the current difficulty and market sell prices.
+# The difficulty values are downloaded from CoinChoose, except for TerraCoin,
+# due to its high fluctuation, a more accurate difficulty is downloaded from
+# cryptocoinexplorer.com. Prices are downloaded from the markets selected in the
+# source_cryptoswitcher list.
+# Available sources: btce, bter, vircurex
+# (only required if cryptoswitcher is in the source list)
+source_cryptoswitcher=btce, bter, vircurex
 
-#And now some information to calculate Vanity Address mining profitability.
-#The figures that go in here depend on your hardware. 
-#If you're not doing vanity mining, you can leave these blank.
-#Gigakeys per second you can test
+# Enter your hashrate (in hashs per seconds) of SHA-256 based currencies
+# (e.g. Bitcoin) and Scrypt based currencies (e.g. LiteCoin). The values are used
+# when CryptoSwitcher is enabled to calculate the profitability. You can get the
+# value of your machine e.g. by running cgminer for a short while. The difference
+# between the two hashrates should be around 1:1000.
+# (only required if cryptoswitcher is in the source list)
+hashrate_scrypt=1450
+hashrate_sha256=1350000
+
+
+################################################################################
+[Misc]
+
+# Idle Time (in minutes) between two checks of coin profitability.
+idletime = 1
+
+# And now some information to calculate Vanity Address mining profitability.
+# The figures that go in here depend on your hardware.
+# If you're not doing vanity mining, you can leave these blank.
+# Gigakeys per second you can test
 gkeypersec = 0.05
-#Gigahash per second you can output doing normal BTC mining.
+
+# Gigahash per second you can output doing normal BTC mining.
 ghashpersec = 0.7
 
+
+################################################################################
 [Sell]
-#If you want to sell your coins ASAP after mining, enable an exchange here.
-#This will automatically sell flagged coins for BTC ONLY.
 
-#BTC-e
+# If you want to sell your coins ASAP after mining, enable an exchange here.
+# This will automatically sell flagged coins for BTC ONLY.
+
+# BTC-e
 enableBTCE = False
-#You'll need to configure your API key, secret, and a nonce in "key.sample".
-#Rename this file to "key". 
+# You'll need to configure your API key, secret, and a nonce in "key.sample".
+# Rename this file to "key".
 
-#VirCurEx
+# VirCurEx
 enableVircurex = False
 vircurexUsername = VCEUSERNAME
 vircurexSecret = APISECRET
 
-#Enable the coins you want to sell here.
+# Enable the coins you want to sell here.
 sellBQC = False
 sellCNC = False
 sellDVC = False
