--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -165,6 +165,11 @@ enableVircurex = False
 vircurexUsername = VCEUSERNAME
 vircurexSecret = APISECRET
 
+# Cryptsy
+enableCryptsy = False
+cryptsyPublicKey = YOUR_CRYPTSY_API_PUBLIC_KEY
+cryptsyPrivateKey = YOUR_CRYPTSY_API_PRIVATE_KEY
+
 # Enable the coins you want to sell here.
 sellBQC = False
 sellCNC = False
