add Bottlecap support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -14,6 +14,7 @@ mineARG = False
 mineBQC = False
 mineBTB = False
 mineBTC = True
+mineCAP = False
 mineCNC = False
 mineDGC = False
 mineELC = False
@@ -70,6 +71,7 @@ BQCscript =
 BTBscript = 
 BTCscript = bitcoin.bat
 BTEscript = 
+CAPscript = 
 CNCscript = 
 DBLscript = 
 DGCscript = 
@@ -112,6 +114,7 @@ feeBQC = 0
 feeBTB = 0
 feeBTC = 1.5
 feeBTE = 0
+feeCAP = 0
 feeCNC = 0
 feeDBL = 0
 feeDGC = 0
@@ -205,6 +208,7 @@ sellARG = False
 sellBQC = False
 sellBTB = False
 sellBTE = False
+sellCAP = False
 sellCNC = False
 sellDBL = False
 sellDGC = False
