add tradeMultiplierCheck option to make sure our orders are always the cheapest (default in config is False for existing behavior)

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -180,6 +180,9 @@ gkeypersec = 0.05
 #  multiple of it.  
 tradeMultiplier = 1.01
 
+# make sure our sell order is the lowest if tradeMultiplier > 1
+tradeMultiplierCheck = False
+
 
 ################################################################################
 [Sell]
