added some coins, and fixed bug referenced in https://bitcointalk.org/index.php?topic=172121.msg2826282#msg2826282

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -16,8 +16,10 @@ mineBQC = False
 mineBTB = False
 mineBTC = True
 mineCAP = False
+mineCGB = False
 mineCNC = False
 mineDGC = False
+mineEMD = False
 mineELC = False
 mineEZC = False
 mineFRC = False
@@ -25,6 +27,7 @@ mineFRK = False
 mineFST = False
 mineFTC = False
 mineHYC = False
+mineKGC = False
 mineLKY = False
 mineLTC = True
 mineMEM = False
@@ -74,9 +77,11 @@ BTBscript =
 BTCscript = bitcoin.bat
 BTEscript = 
 CAPscript = 
+CGBscript = 
 CNCscript = 
 DBLscript = 
 DGCscript = 
+EMDscript = 
 ELCscript = 
 EZCscript = 
 FRCscript = 
@@ -85,6 +90,7 @@ FSTscript =
 FTCscript = 
 GLDscript = 
 HYCscript = 
+KGCscript = 
 JKCscript = 
 LKYscript = 
 LTCscript = ./litecoin.sh
@@ -118,9 +124,11 @@ feeBTB = 0
 feeBTC = 1.5
 feeBTE = 0
 feeCAP = 0
+feeCGB = 0
 feeCNC = 0
 feeDBL = 0
 feeDGC = 0
+feeEMD = 0
 feeELC = 0
 feeEZC = 0
 feeFRC = 0
@@ -129,6 +137,7 @@ feeFST = 0
 feeFTC = 0
 feeGLD = 0
 feeHYC = 0
+feeKGC = 0
 feeJKC = 0
 feeLKY = 0
 feeLTC = 2
@@ -216,9 +225,11 @@ sellBQC = False
 sellBTB = False
 sellBTE = False
 sellCAP = False
+sellCGB = False
 sellCNC = False
 sellDBL = False
 sellDGC = False
+sellEMD = False
 sellELC = False
 sellEZC = False
 sellFRC = False
@@ -227,6 +238,7 @@ sellFST = False
 sellFTC = False
 sellGLD = False
 sellHYC = False
+sellKGC = False
 sellJKC = False
 sellLKY = False
 sellLTC = False
