add Bitgem support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -15,6 +15,7 @@ mineARG = False
 mineBQC = False
 mineBTB = False
 mineBTC = True
+mineBTG = False
 mineCAP = False
 mineCGB = False
 mineCNC = False
@@ -76,6 +77,7 @@ BQCscript =
 BTBscript = 
 BTCscript = bitcoin.bat
 BTEscript = 
+BTGscript = 
 CAPscript = 
 CGBscript = 
 CNCscript = 
@@ -123,6 +125,7 @@ feeBQC = 0
 feeBTB = 0
 feeBTC = 1.5
 feeBTE = 0
+feeBTG = 0
 feeCAP = 0
 feeCGB = 0
 feeCNC = 0
@@ -224,6 +227,7 @@ sellARG = False
 sellBQC = False
 sellBTB = False
 sellBTE = False
+sellBTG = False
 sellCAP = False
 sellCGB = False
 sellCNC = False
