add Grandcoin & Lebowski support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -27,8 +27,10 @@ mineFRC = False
 mineFRK = False
 mineFST = False
 mineFTC = False
+mineGDC = False
 mineHYC = False
 mineKGC = False
+mineLBW = False
 mineLKY = False
 mineLTC = True
 mineMEM = False
@@ -90,10 +92,12 @@ FRCscript =
 FRKscript = 
 FSTscript = 
 FTCscript = 
+GDCscript = 
 GLDscript = 
 HYCscript = 
 KGCscript = 
 JKCscript = 
+LBWscript = 
 LKYscript = 
 LTCscript = ./litecoin.sh
 MECscript = 
@@ -138,10 +142,12 @@ feeFRC = 0
 feeFRK = 0
 feeFST = 0
 feeFTC = 0
+feeGDC = 0
 feeGLD = 0
 feeHYC = 0
 feeKGC = 0
 feeJKC = 0
+feeLBW = 0
 feeLKY = 0
 feeLTC = 2
 feeMEC = 0
@@ -240,10 +246,12 @@ sellFRC = False
 sellFRK = False
 sellFST = False
 sellFTC = False
+sellGDC = False
 sellGLD = False
 sellHYC = False
 sellKGC = False
 sellJKC = False
+sellLBW = False
 sellLKY = False
 sellLTC = False
 sellMEC = False
