add Hobonickel support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -28,6 +28,7 @@ mineFRK = False
 mineFST = False
 mineFTC = False
 mineGDC = False
+mineHBN = False
 mineHYC = False
 mineKGC = False
 mineLBW = False
@@ -94,6 +95,7 @@ FSTscript =
 FTCscript = 
 GDCscript = 
 GLDscript = 
+HBNscript = 
 HYCscript = 
 KGCscript = 
 JKCscript = 
@@ -144,6 +146,7 @@ feeFST = 0
 feeFTC = 0
 feeGDC = 0
 feeGLD = 0
+feeHBN = 0
 feeHYC = 0
 feeKGC = 0
 feeJKC = 0
@@ -248,6 +251,7 @@ sellFST = False
 sellFTC = False
 sellGDC = False
 sellGLD = False
+sellHBN = False
 sellHYC = False
 sellKGC = False
 sellJKC = False
