add Spot support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -40,6 +40,7 @@ mineNBL = False
 mineNVC = False
 minePPC = False
 minePXC = False
+mineSPT = False
 mineTRC = False
 mineWDC = False
 
@@ -111,6 +112,7 @@ PPCscript =
 PWCscript = 
 PXCscript = 
 RYCscript = 
+SPTscript = 
 TRCscript = 
 WDCscript = 
 YACscript = 
@@ -162,6 +164,7 @@ feePPC = 0
 feePWC = 0
 feePXC = 0
 feeRYC = 0
+feeSPT = 0
 feeTRC = 0
 feeWDC = 0
 feeYAC = 0
@@ -267,6 +270,7 @@ sellPPC = False
 sellPWC = False
 sellPXC = False
 sellRYC = False
+sellSPT = False
 sellTRC = False
 sellWDC = False
 sellYAC = False
