add Craftcoin support

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -19,6 +19,7 @@ mineBTG = False
 mineCAP = False
 mineCGB = False
 mineCNC = False
+mineCRC = False
 mineDGC = False
 mineEMD = False
 mineELC = False
@@ -85,6 +86,7 @@ BTGscript =
 CAPscript = 
 CGBscript = 
 CNCscript = 
+CRCscript = 
 DBLscript = 
 DGCscript = 
 EMDscript = 
@@ -137,6 +139,7 @@ feeBTG = 0
 feeCAP = 0
 feeCGB = 0
 feeCNC = 0
+feeCRC = 0
 feeDBL = 0
 feeDGC = 0
 feeEMD = 0
@@ -243,6 +246,7 @@ sellBTG = False
 sellCAP = False
 sellCGB = False
 sellCNC = False
+sellCRC = False
 sellDBL = False
 sellDGC = False
 sellEMD = False
