Added support for ButterflyCoin

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -12,6 +12,7 @@
 mineAMC = False
 mineANC = False
 mineARG = False
+mineBFC = False
 mineBQC = False
 mineBTB = False
 mineBTC = True
@@ -78,7 +79,8 @@ mineVANITY = False
 # For Windows you can use bat-files, eg "BTCscript = bitcoin.bat".
 AMCscript = 
 ANCscript = 
-ARGscript = 
+ARGscript =
+BFCscript = 
 BQCscript = 
 BTBscript = 
 BTCscript = bitcoin.bat
@@ -133,6 +135,7 @@ VANITYscript =
 feeAMC = 0
 feeANC = 0
 feeARG = 0
+feeBFC = 0
 feeBQC = 0
 feeBTB = 0
 feeBTC = 1.5
@@ -242,6 +245,7 @@ cryptsyPrivateKey = YOUR_CRYPTSY_API_PRIVATE_KEY
 sellAMC = False
 sellANC = False
 sellARG = False
+sellBFC = False
 sellBQC = False
 sellBTB = False
 sellBTE = False
