--- a/terracoin.bat.sample
+++ b/terracoin.bat.sample
@@ -1,8 +1,10 @@
 @echo off
-::end old cgminer if running
-tasklist /FI "IMAGENAME eq cgminer.exe" 2>NUL | find /I /N "cgminer.exe">NUL
-if "%ERRORLEVEL%"=="0" taskkill /IM cgminer.exe /F
-::start new cgminer
 rem. Change the path to where cgminer or bfgminer is installed.
 set CGPATH="C:\Program Files (x86)\cgminer-3.4.0-windows"
-start cmd.exe /C "%CGPATH%\cgminer-nogpu.exe --icarus-options 115200:1:1 --icarus-timing 3.0=100 -c %CGPATH%\terracoin_cgminer.conf --api-network --api-listen --api-allow W:127.0.0.1"
+rem. Witch exe are we using?.
+set CGEXE="cgminer-nogpu.exe"
+::end old cgminer if running
+tasklist /FI "IMAGENAME eq %CGEXE%" 2>NUL | find /I /N %CGEXE%>NUL
+if "%ERRORLEVEL%"=="0" taskkill /IM %CGEXE% /F
+::start new cgminer
+start cmd.exe /C "%CGPATH%\%CGEXE% --icarus-options 115200:1:1 --icarus-timing 3.0=100 -c %CGPATH%\terracoin_cgminer.conf --api-network --api-listen --api-allow W:127.0.0.1"
