--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -43,6 +43,7 @@ mineNVC = False
 minePPC = False
 minePXC = False
 mineSPT = False
+mineTGC = False
 mineTRC = False
 mineWDC = False
 mineZET = False
@@ -118,6 +119,7 @@ PWCscript =
 PXCscript = 
 RYCscript = 
 SPTscript = 
+TGCscript = 
 TRCscript = 
 WDCscript = 
 YACscript = 
@@ -173,6 +175,7 @@ feePWC = 0
 feePXC = 0
 feeRYC = 0
 feeSPT = 0
+feeTGC = 0
 feeTRC = 0
 feeWDC = 0
 feeYAC = 0
@@ -282,6 +285,7 @@ sellPWC = False
 sellPXC = False
 sellRYC = False
 sellSPT = False
+sellTGC = False
 sellTRC = False
 sellWDC = False
 sellYAC = False
