--- a/ppcoin.bat.sample
+++ b/ppcoin.bat.sample
@@ -9,11 +9,12 @@ rem. Witch exe are we using?.
 set CGEXE="cgminer-nogpu.exe"
 
 rem. What extra cgminer options do we need?
-set CGOPT="--icarus-options 115200:1:1 --icarus-timing 3.0=100"
+set CGOPT="--icarus-options 115200:1:1 --icarus-timing 3.0=100 --api-network --api-listen --api-allow W:127.0.0.1"
 
 ::end old cgminer if running
 tasklist /FI "IMAGENAME eq %CGEXE%" 2>NUL | find /I /N %CGEXE%>NUL
 if "%ERRORLEVEL%"=="0" taskkill /IM %CGEXE% /F
 
 ::start new cgminer
+start cmd.exe /C "%CGPATH%\%CGEXE% "%CGOPT%" -c %CGPATH%\%CGCONF%"
 start cmd.exe /C "%CGPATH%\%CGEXE% "%CGOPT%" -c %CGPATH%\%CGCONF% --api-network --api-listen --api-allow W:127.0.0.1"
