--- a/butterflycoin.bat.sample
+++ b/butterflycoin.bat.sample
@@ -1,6 +1,6 @@
 @echo off
 rem. What config file do we use?
-set CGCONF=bitcoin_cgminer.conf
+set CGCONF=butterflycoin_cgminer.conf
 
 rem. Change the path to where cgminer or bfgminer is installed.
 set CGPATH="C:\Program Files (x86)\cgminer-3.4.0-windows"
@@ -9,7 +9,7 @@ rem. Witch exe are we using?.
 set CGEXE="cgminer-nogpu.exe"
 
 rem. What extra cgminer options do we need?
-set CGOPT="--icarus-options 115200:1:1 --icarus-timing 3.0=100 --api-network --api-listen --api-allow W:127.0.0.1"
+set CGOPT="--no-submit-stale --icarus-options 115200:1:1 --icarus-timing 3.0=100 --api-network --api-listen --api-allow W:127.0.0.1"
 
 ::end old cgminer if running
 tasklist /FI "IMAGENAME eq %CGEXE%" 2>NUL | find /I /N %CGEXE%>NUL
