--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -12,6 +12,7 @@
 mineAMC = False
 mineANC = False
 mineARG = False
+mineASC = False
 mineBFC = False
 mineBQC = False
 mineBTB = False
@@ -80,7 +81,8 @@ mineVANITY = False
 # For Windows you can use bat-files, eg "BTCscript = bitcoin.bat".
 AMCscript = 
 ANCscript = 
-ARGscript =
+ARGscript = 
+ASCscript = 
 BFCscript = 
 BQCscript = 
 BTBscript = 
@@ -137,6 +139,7 @@ VANITYscript =
 feeAMC = 0
 feeANC = 0
 feeARG = 0
+feeASC = 0
 feeBFC = 0
 feeBQC = 0
 feeBTB = 0
@@ -248,6 +251,7 @@ cryptsyPrivateKey = YOUR_CRYPTSY_API_PRIVATE_KEY
 sellAMC = False
 sellANC = False
 sellARG = False
+sellASC = False
 sellBFC = False
 sellBQC = False
 sellBTB = False
