Added i0coin to merged mining.

--- a/cryptoSwitcher.config.sample
+++ b/cryptoSwitcher.config.sample
@@ -65,6 +65,7 @@ mineYAC = False
 # BTC Merged mining coins. Will be added to Bitcoin profitibilty when enabled.
 mineDVC = True
 mineIXC = True
+mineI0C = False
 mineNMC = True
 
 # Enable to mine vanity addresses.
